--- a/Prueba 09012020/Punto1y2/index.html
+++ b/Prueba 09012020/Punto1y2/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col">
                 <div class="card" style="width: 18rem;">
                     <div class="card-header">
                         1.Multiplicación sin el signo (*)
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col">
                 <div class="card" style="width: 30rem;">
                     <div class="card-header">
                         2.Mayor número de un arreglo
