--- a/PruebaDesarrollador/API REST/Prueba-REST-Front-end/front-rest/src/index.html
+++ b/PruebaDesarrollador/API REST/Prueba-REST-Front-end/front-rest/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="#">
+                <img src="./assets/icono.png" width="40" height="40" class="d-inline-block align-top" alt="">
+
+            </a>
+            <h3>Contratos</h3>
+        </nav>
+    </header>
     <app-root></app-root>
 </body>
 
